styles/src/_media-queries.scss
@media screen and (max-width: 1280px) {
	body {
		background-size: auto;
	}
}

@media screen and (max-width: 1100px) {
	body .container {
		width: 70%;
	}
}

@media screen and (max-width: 640px) {
	body {
		.container {
			width: 90%;
			margin-top: 0;
			form {
				.input-field {
					margin-bottom: 10px;
				}
				.form-controls {
					position: relative;
					display: block;
				}
				.select-overlay {
					position: relative;
					display: inline-block;
					right: auto;
					&:after {
						top: 17px;
						right: 18px;
					}
				}
				select {
					left: 8%;
					width: 50%;
				}

				input[type=submit] {
					position: relative;
					margin-left: 8px;
					height: 38px;
				}
			}
		}
		.dashboard-data-container {
			margin-bottom: 20px;
			p {
				font-size: 14px;
			}
			.loader{
			  height: 26px;
			}
		}
		.todo-list {
			width: 100%;
		}
		h1 {
			font-size: 18px;
			margin: 12px 0px;

		}

		footer {
			opacity: .8;
			.expanded-footer {
				width: 100%;
			}
		}
	}
}

